# termux-ftdi-shell

./: .gitignore  LICENSE  Makefile  README.md  REPORT.md  config.h  configure.ac  package-manifest.yml  run-termux-ftdi-shell  setup_termux
.github/workflows/: build-and-deploy.yml
src/: Makefile.am  config.c  config.h  ftdi_utils.c  ftdi_utils.h  main.c  pty_utils.c  pty_utils.h  queue.c  queue.h  usb_utils.c  usb_utils.h  utils.c  utils.h
